--- a/getting_started/mysite/polls/templates/polls/index.html
+++ b/getting_started/mysite/polls/templates/polls/index.html
@@ -9,12 +9,12 @@
       <ul>
         {% for question in latest_question_list %}
           <li>
-            <a href="/polls/{{question.id}}/">{{question.question_text}}</a>
+            <a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a>
           </li>
         {% endfor %}
       </ul>
     {% else %}
-      <p>No polls are available.</p>
+      <p>No polls available.</p>
     {% endif %}
   </body>
 </html>
