--- a/getting_started/mysite/polls/templates/polls/detail.html
+++ b/getting_started/mysite/polls/templates/polls/detail.html
@@ -16,8 +16,8 @@
             <strong>{{ error_message }}</strong>
           </p>
         {% endif %}
-        {% for choice in choices %}
-          <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.choice_text }}" />
+        {% for choice in question.choice_set.all %}
+          <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
           <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
         {% endfor %}
       </fieldset>
