--- a/getting_started/mysite/polls/templates/polls/index.html
+++ b/getting_started/mysite/polls/templates/polls/index.html
@@ -2,21 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Learning Django</title>
+    {% load static %}
+    <link href="{% static 'polls/css/style.css' %}" rel="stylesheet">
   </head>
-  <body>
-    {% if latest_question_list %}
-      <ul>
-        {% for question in latest_question_list %}
-            {% comment %} {% if question.choice_set.all %} {% endcomment %}
-          <li>
-            <a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a>
-          </li>
-            {% comment %} {% endif %} {% endcomment %}
-        {% endfor %}
-      </ul>
-    {% else %}
-      <p>No polls available.</p>
-    {% endif %}
+  <body class="showcase">
+    <div class="container">
+      <h1>
+        Poll questions
+      </h1>
+      {% if latest_question_list %}
+        <ul>
+          {% for question in latest_question_list %}
+              {% comment %} {% if question.choice_set.all %} {% endcomment %}
+            <li>
+              <a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a>
+            </li>
+              {% comment %} {% endif %} {% endcomment %}
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>No polls available.</p>
+      {% endif %}
+    </div>
   </body>
 </html>
