--- a/getting_started/mysite/polls/templates/polls/detail.html
+++ b/getting_started/mysite/polls/templates/polls/detail.html
@@ -2,26 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Learning Django - Detail</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'polls/css/style.css' %}">
   </head>
   <body>
-    <form action="{% url 'polls:vote' question.id %}" method="post">
-      {% csrf_token %}
-      <fieldset>
-        <legend>
-          <h1>{{ question.question_text }}</h1>
-        </legend>
-        {% if error_message %}
-          <p>
-            <strong>{{ error_message }}</strong>
-          </p>
-        {% endif %}
-        {% for choice in question.choice_set.all %}
-          <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-          <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-        {% endfor %}
-      </fieldset>
-      <input type="submit" value="Vote">
-    </form>
+    <div class="container">
+      <form action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
+        <fieldset>
+          <legend>
+            <h1>{{ question.question_text }}</h1>
+          </legend>
+          {% if error_message %}
+            <p>
+              <strong>{{ error_message }}</strong>
+            </p>
+          {% endif %}
+          {% for choice in question.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
+          {% endfor %}
+        </fieldset>
+        <button class="btn-primary" type="submit">Vote</button>
+      </form>
+    </div>
   </body>
 </html>
