--- a/django_forms/nandiasgarden-project/pizza/templates/pizza/order.html
+++ b/django_forms/nandiasgarden-project/pizza/templates/pizza/order.html
@@ -1,5 +1,5 @@
 <h1>Order a 'za</h1>
-<form action="{% url 'order' %}" method="POST">
+<form enctype="multipart/form-data" action="{% url 'order' %}" method="POST">
   {% csrf_token %}
   {{ pizzaform }}
   <input type="submit" name="" id="" value="Place Order">
