--- a/django_forms/nandiasgarden-project/pizza/templates/pizza/order.html
+++ b/django_forms/nandiasgarden-project/pizza/templates/pizza/order.html
@@ -1,7 +1,16 @@
 <h1>Order a 'za</h1>
-<form enctype="multipart/form-data" action="{% url 'order' %}" method="POST">
+<form action="{% url 'order' %}" method="POST">
   {% csrf_token %}
   {{ pizzaform }}
   <input type="submit" name="" id="" value="Place Order">
   <h2>{{note}}</h2>
+</form>
+
+<br><br>
+
+<h3>Want more than one 'za to stuff your face-hole with?</h3>
+
+<form action="{% url 'pizzas' %}" method="GET">
+  {{ multiple_form }}
+  <input type="submit" value="Get more 'za">
 </form>
