--- a/django_forms/nandiasgarden-project/pizza/templates/pizza/order.html
+++ b/django_forms/nandiasgarden-project/pizza/templates/pizza/order.html
@@ -1,13 +1,15 @@
 <h1>Order a 'za</h1>
 <form action="{% url 'order' %}" method="POST">
   {% csrf_token %}
-  {{ pizzaform }}
+  {{ pizzaform.as_ul }}
   <input type="submit" name="" id="" value="Place Order">
-  <h2>{{ note }}</h2>
-  {% if created_pizza_pk %}
-  <a href="{% url 'edit_order' created_pizza_pk %}">Edit your order</a>
-  {% endif %}
 </form>
+
+<h2>{{ note }}</h2>
+
+{% if created_pizza_pk %}
+<a href="{% url 'edit_order' created_pizza_pk %}">Edit your order</a>
+{% endif %}
 
 <br><br>
 
